# flux-lsp

./: .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  Makefile  RELEASE.md  Readme.md  SECURITY.md  build-docker-image.sh  build.sh  bump-version.sh  consume-lsp  consume-lsp.sh  get_flux_version  lsp-release.sh  publish.sh  release.sh  run-tests.sh  rust-toolchain.toml  tag-release.sh  testing.md  update-downstream.sh  vars.sh  wasm-build.sh
.cargo/: config
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
benches/: server.rs
docs/: SPEC-composition.md
integration/: README.md  lsp.test.ts  package-lock.json  package.json
src/: cache.rs  completion.rs  composition.rs  convert.rs  diagnostics.rs  handler.rs  lang.rs  lib.rs  logger.rs  loggers.rs  lsp.rs  main.rs  protocol.rs  server.rs  shared.rs  stdlib.rs  structs.rs  utils.rs  visitors.rs  wasm.rs  wasm2.rs
src/cache/: mod.rs
src/format/: mod.rs
src/handlers/: completion.rs  completion_resolve.rs  document_change.rs  document_close.rs  document_formatting.rs  document_open.rs  document_save.rs  document_symbol.rs  folding.rs  goto_definition.rs  hover.rs  initialize.rs  mod.rs  references.rs  rename.rs  router.rs  shutdown.rs  signature_help.rs  tests.rs
src/protocol/: mod.rs  notifications.rs  properties.rs  requests.rs  responses.rs
src/server/: commands.rs  mod.rs  store.rs  tests.rs  transform.rs  types.rs
src/shared/: ast.rs  callbacks.rs  conversion.rs  messages.rs  mod.rs  signatures.rs  structs.rs  tests.rs
src/stdlib/: mod.rs
src/visitors/: ast.rs  mod.rs
src/visitors/ast/: mod.rs  package_finder.rs
src/visitors/semantic/: completion.rs  functions.rs  lint.rs  mod.rs  symbols.rs  utils.rs  walk.rs
src/visitors/semantic/completion/: mod.rs  results.rs  utils.rs
src/visitors/semantic/symbols/: mod.rs
src/wasm/: lang.rs  lsp.rs  mod.rs  tests.rs
tests/: handlers.rs  shared.rs  wasm.rs
tests/fixtures/: completion.flux  completion_in_function.flux  completion_scope.flux  error.flux  formatting.flux  incomplete_option.flux  multiple_1.flux  object_param_completion.flux  ok.flux  options.flux  options_function.flux  options_object_members.flux  package_completion.flux  param_completion.flux  signatures.flux  simple.flux  unformatted.flux
