[package]
name = "flux-lsp"
version = "0.8.0"
authors = ["Flux Developers <flux-developers@influxdata.com>"]
edition = "2018"
license = "MIT"
description = "LSP support for the flux language"
repository = "https://github.com/influxdata/flux-lsp"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[profile.release]
opt-level = "z"
lto = true

[features]
default = ["strict"]
strict = []
wasm_next = []

[lib]
name = "flux_lsp"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "flux-lsp"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.50"
clap = "2.33.3"
combinations = "0.1.0"
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2", optional = true }
expect-test = "1"
flux = { git = "https://github.com/influxdata/flux", tag = "v0.148.0" }
futures = "0.3.15"
js-sys = "0.3.51"
line-col = "0.2.1"
log = "0.4.14"
lspower = { version = "=1.4.0", default-features = false, features = ["runtime-agnostic" ] }
pretty_assertions = "1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_repr = "0.1.7"
simplelog = "0.10.0"
tower-service = { version = "0.3.1" }
url = "2.2.2"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
web-sys = { version = "0.3.51", features = ["console"] }


[dev-dependencies]
criterion = "0.3"
futures = "0.3.15"
wasm-bindgen-test = "0.3.0"

[[bench]]
name = "server"
path = "benches/server.rs"
harness = false
