[package]
name = "flux-lsp"
version = "0.8.21"
authors = ["Flux Developers <flux-developers@influxdata.com>"]
edition = "2021"
license = "MIT"
description = "LSP support for the flux language"
repository = "https://github.com/influxdata/flux-lsp"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[profile.release]
opt-level = "z"
lto = true

[features]
default = ["cmd"]
strict = []
cmd = ["clap", "simplelog", "tokio", "tower-service", "lspower/runtime-tokio"]
wasm = ["futures", "js-sys", "lspower/runtime-agnostic", "tower-service", "wasm-bindgen", "wasm-bindgen-futures", "wee_alloc"]
fluxlang = []

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flux-lsp"
required-features = ["cmd"]
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"], optional = true }
async-trait = "0.1.53"
clap = { version = "3.1.9", features = ["derive"], optional = true }
combinations = "0.1.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "0.2", optional = true }
flux = { git = "https://github.com/influxdata/flux", tag = "v0.174.0", features = ["lsp"], default-features = false }
futures = { version = "0.3.21", optional = true }
js-sys = { version = "0.3.57", optional = true }
line-col = "0.2.1"
log = "0.4.16"
lspower = { version = "1.5.0", default-features = false, optional = true }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.79"
simplelog = { version = "0.12.0", optional = true }
tokio = { version = "1.17.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread"], optional = true }
tower-service = { version = "0.3.1", optional = true }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4.30", optional = true }
web-sys = { version = "0.3.57", features = ["console"], optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
criterion = "0.3"
env_logger = "0.9"
expect-test = "1.2.2"
futures = "0.3.15"
pretty_assertions = "1.2.1"
wasm-bindgen-test = "0.3.30"

[[bench]]
name = "server"
path = "benches/server.rs"
harness = false
